Tests added for flight class and parameterized tests added

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary1\Domain.csproj" />
+    <ProjectReference Include="..\ClassLibrary1\CalculatorDomain.csproj" />
   </ItemGroup>
 
 </Project>
